--- a/PAGES/PropertyDetails/css/style.css
+++ b/PAGES/PropertyDetails/css/style.css
@@ -1,3 +1,15 @@
+
+
+
+
+
+
+
+
+
+
+
+
 *, *:before, *:after {
   box-sizing: border-box;
 }
@@ -9,8 +21,7 @@ html
 
 body
  {
-  background-color: #c5c5cb;
-  /*background:url(../3.png);*/
+ background:url(../2.jpg);
    background-size: cover; 
   background-repeat: no-repeat;
   background-position: center;
@@ -33,8 +44,7 @@ a:hover
 .form 
 {
   /*background: rgba(19, 35, 47, 0.9);*/
-  /*background-color: rgba(0, 0, 0, 0.5);*/
-  background-color:rgba(0, 208, 240, 0.17);
+  background-color: rgba(0, 0, 0, 0.5);
   padding: 40px;
   max-width: 600px;
   margin: 40px auto;
@@ -167,7 +177,7 @@ textarea {
   font-weight: 600;
   text-transform: uppercase;
   letter-spacing: .1em;
-  background: #00BFFF;
+  background: #DAA520;
   color: #ffffff;
   transition: all 0.5s ease;
   -webkit-appearance: none;
