--- a/css/style-login.css
+++ b/css/style-login.css
@@ -22,21 +22,28 @@ a:hover {
   color: #179b77;
 }
 
-.form {
+.form 
+{
   padding: 40px;
   max-width: 600px;
   margin: 40px auto;
   border-radius: 4px;
+  
   /*box-shadow: 0 4px 10px 4px rgba(19, 35, 47, 0.3);*/
   box-shadow: 0 4px 10px 4px rgba(77, 148, 255, 0.3);
   transition: .5s ease;
 }
 
-.form:hover {
+.form:hover
+ {
+  background-color:rgba(23, 124, 97,.3);
+
 	box-shadow: 0px 0px 40px 16px rgba(18,18,18,1.00);
 	}
 
-.tab-group {
+.tab-group
+ {
+
   list-style: none;
   padding: 0;
   margin: 0 0 40px 0;
