--- a/PAGES/EmploymentDetails/css/style.css
+++ b/PAGES/EmploymentDetails/css/style.css
@@ -9,7 +9,7 @@ html
 
 body
  {
-  background-color: #c5c5cb;
+  background-color:#e8e8e8;
   /*background:url(../3.png);*/
    background-size: cover; 
   background-repeat: no-repeat;
@@ -33,8 +33,8 @@ a:hover
 .form 
 {
   /*background: rgba(19, 35, 47, 0.9);*/
-  /*background-color: rgba(0, 0, 0, 0.5);*/
-  background-color:rgba(0, 208, 240, 0.17);
+  background-color: rgba(0, 0, 0, 0.45);
+  /*background-color:rgba(0, 208, 240, 0.1);*/
   padding: 40px;
   max-width: 600px;
   margin: 40px auto;
@@ -167,7 +167,7 @@ textarea {
   font-weight: 600;
   text-transform: uppercase;
   letter-spacing: .1em;
-  background: #00BFFF;
+  background: #4286f4;
   color: #ffffff;
   transition: all 0.5s ease;
   -webkit-appearance: none;
@@ -175,7 +175,7 @@ textarea {
 .button:hover, .button:focus
  {
   cursor: pointer ;
-  background: #179b77;
+  background: #153363;
 }
 
 .button-block {
