--- a/PAGES/PropertyDetails/css/style.css
+++ b/PAGES/PropertyDetails/css/style.css
@@ -1,15 +1,3 @@
-
-
-
-
-
-
-
-
-
-
-
-
 *, *:before, *:after {
   box-sizing: border-box;
 }
@@ -21,7 +9,8 @@ html
 
 body
  {
- background:url(../2.jpg);
+  background-color:#e8e8e8;
+  /*background:url(../3.png);*/
    background-size: cover; 
   background-repeat: no-repeat;
   background-position: center;
@@ -44,7 +33,8 @@ a:hover
 .form 
 {
   /*background: rgba(19, 35, 47, 0.9);*/
-  background-color: rgba(0, 0, 0, 0.5);
+  background-color: rgba(0, 0, 0, 0.45);
+  /*background-color:rgba(0, 208, 240, 0.1);*/
   padding: 40px;
   max-width: 600px;
   margin: 40px auto;
@@ -177,7 +167,7 @@ textarea {
   font-weight: 600;
   text-transform: uppercase;
   letter-spacing: .1em;
-  background: #DAA520;
+  background: #4286f4;
   color: #ffffff;
   transition: all 0.5s ease;
   -webkit-appearance: none;
@@ -185,7 +175,7 @@ textarea {
 .button:hover, .button:focus
  {
   cursor: pointer ;
-  background: #179b77;
+  background: #153363;
 }
 
 .button-block {
